Changes for 3.0.9rc1

New features:

Bug fixes:
..F....... [ZBX-11933] added fullscreen parameter in link to submap in maps (vmurzins)
A......... [ZBX-11893] fixed permission issue, when importing hosts that are monitored by proxy by Zabbix Admin type user (vmurzins)
..F....... [ZBX-11905] fixed redirect to original requested page after login (vmurzins)
.......PS. [ZBX-11864] fixed formatting of URLs if an IPv6 is used in simple HTTPS checks (abs)
..F....... [ZBX-6851] fixed zero number display in Event ID column in windows eventlog history (vmurzins)
..F....... [ZBX-11624] fixed undefined index error for regular expressions form (vmurzins)
.......PS. [ZBX-11855] fixed data truncation when escaping strings that contain carriage return (vso)
.......PS. [ZBX-11758] fixed crash in web monitoring when variable is empty or the first step was called regexp function on Solaris (Sergejs)
.......PS. [ZBX-11765] fixed incorrect rollback in process of escalation for DB2 database (Sergejs)

--------------------------------------------------------------------------------
Changes for 3.0.8

New features:
A.F....... [ZBX-1357] updated Czech, French, Japanese, Polish, Portuguese (Brazil) translations; thanks to Zabbix translators (zalex_ua)

--------------------------------------------------------------------------------
Changes for 3.0.8rc1

New features:
.......PS. [ZBXNEXT-3681] improved bulk inserts for Oracle database backend (wiper)
........S. [ZBXNEXT-3669] optimized trigger expression batch processing to avoid recalculation of identical functions (wiper)
..F.....S. [ZBXNEXT-3572] added option to control amount of queued items (vjaceslavs)

Bug fixes:
...G...... [ZBX-11568] fixed incorrect number rounding for CPU statistics (abs)
........S. [ZBX-11781] fixed potential integer underflow/overflow in the housekeeper process (abs)
.......PS. [ZBX-10902] fixed wrong averages in web monitoring if a web server doesn't respond to a request (abs)