@@ -585,7 +585,8 @@ static int	process_trap(zbx_socket_t *sock, char *s, zbx_timespec_t *ts)
 			}
 			else if (0 == strcmp(value, ZBX_PROTO_VALUE_COMMAND))
 			{
-				ret = node_process_command(sock, s, &jp);
+				if (0 != (program_type & ZBX_PROGRAM_TYPE_SERVER))
+					ret = node_process_command(sock, s, &jp);
 			}
 			else if (0 == strcmp(value, ZBX_PROTO_VALUE_GET_QUEUE))
 			{
